Fixed errors of creating recuiter profile
